gitops/workloads/raw/dbeaver/manifests/dbeaver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  namespace: dbeaver
  labels:
    app.kubernetes.io/name: cloudbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudbeaver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudbeaver
    spec:
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:24.3.0
          ports:
            - containerPort: 8978
          volumeMounts:
            - { name: data, mountPath: /opt/cloudbeaver/workspace }
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cloudbeaver
---
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
  namespace: dbeaver
spec:
  selector:
    app.kubernetes.io/name: cloudbeaver
  ports:
    - port: 80
      targetPort: 8978
