gitops/workloads/raw/dbeaver/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbeaver
  namespace: dbeaver
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - "dbeaver.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: cloudbeaver
          port: 80
